src/main/java/com/errors/test_errors_list/TestErrorsListApplication.java
package com.errors.test_errors_list;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TestErrorsListApplication {

	public static void main(String[] args) {
		SpringApplication.run(TestErrorsListApplication.class, args);
	}

}
